# Neptune-Project

./: README.md  db.sqlite3  manage.py  package-lock.json  package.json  pyproject.toml
WriteStackAI/: asgi.py  settings.py  urls.py  wsgi.py
data/chromadb/texts.db/: chroma.sqlite3
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Card.module.scss  Card.tsx  CardGrid.module.scss  CardGrid.tsx  Icon.tsx  MainApp.module.scss  MainApp.tsx
text/: chroma_singleton.py  serializers.py  tests.py  urls.py  views.py
text/management/commands/: empty_chromadb.py
